--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,30 +3,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4add2389",
+   "id": "d442848e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def flag_ospd_mismatched_billing_entities(df):\n",
-    "    def normalize_entity(entity):\n",
-    "        if pd.isna(entity):\n",
-    "            return ''\n",
+    "def detect_billing_entity_mismatches(main_df):\n",
+    "    # Step 1: Create cleaned versions from both columns\n",
+    "    def clean_entity(entity):\n",
     "        entity = str(entity).strip()\n",
-    "        # Remove abbreviation prefix if present (everything before and including the first underscore)\n",
-    "        return entity.split('_', 1)[-1] if '_' in entity else entity\n",
+    "        return entity.rsplit('_', 1)[-1].strip().lower()\n",
+    "    \n",
+    "    main_df['Billing Entity (cleaned)'] = main_df['Billing Entity'].apply(clean_entity)\n",
+    "    main_df['Billing Entity from OSPD (cleaned)'] = main_df['Billing Entity name as per OSPD'].apply(clean_entity)\n",
     "\n",
-    "    # Apply normalization for comparison only\n",
-    "    normalized_billing = df['Billing Entity'].apply(normalize_entity).str.lower()\n",
-    "    normalized_ospd = df['Billing Entity name as per OSPD'].fillna('').astype(str).str.strip().str.lower()\n",
-    "\n",
-    "    # Compare normalized values\n",
-    "    df['Billing Entity Comment (OSPD Check)'] = np.where(\n",
-    "        normalized_billing != normalized_ospd,\n",
-    "        'Mismatch with OSPD Billing Entity value',\n",
-    "        ''\n",
+    "    # Step 2: Compare cleaned columns (case-insensitive)\n",
+    "    mismatch_mask = (\n",
+    "        (main_df['Billing Entity (cleaned)'].notna()) &\n",
+    "        (main_df['Billing Entity from OSPD (cleaned)'].notna()) &\n",
+    "        (main_df['Billing Entity (cleaned)'] != main_df['Billing Entity from OSPD (cleaned)'])\n",
     "    )\n",
     "\n",
-    "    return df\n"
+    "    # Step 3: Add a comment where mismatches occur\n",
+    "    main_df['Billing Entity Mismatch Comment'] = ''\n",
+    "    main_df.loc[mismatch_mask, 'Billing Entity Mismatch Comment'] = (\n",
+    "        'Mismatch after cleaning: '\n",
+    "        'Billing Entity = \"' + main_df['Billing Entity'] + '\", '\n",
+    "        'OSPD = \"' + main_df['Billing Entity name as per OSPD'] + '\"'\n",
+    "    )\n",
+    "\n",
+    "    return main_df\n"
    ]
   },
   {
