--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,107 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f99d3fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flag_new_bpce_combinations(main_df, last_month_df):\n",
+    "    # Clean for matching\n",
+    "    def clean_for_key(series):\n",
+    "        return series.astype(str).str.strip().str.lstrip('0')\n",
+    "\n",
+    "    # Create temp cleaned BPCC keys\n",
+    "    main_df['Temp_BPCC'] = clean_for_key(main_df['Business Partner Cost Center'])\n",
+    "    last_month_df['Temp_BPCC'] = clean_for_key(last_month_df['Business Partner Cost Center'])\n",
+    "\n",
+    "    # Create lookup dictionary from last_month_df\n",
+    "    bpcc_billing_map = last_month_df.dropna(subset=['Billing Entity']).drop_duplicates('Temp_BPCC').set_index('Temp_BPCC')['Billing Entity'].to_dict()\n",
+    "\n",
+    "    # Track old values and apply update\n",
+    "    if 'Comment' not in main_df.columns:\n",
+    "        main_df['Comment'] = ''\n",
+    "\n",
+    "    updated_rows = main_df['Temp_BPCC'].isin(bpcc_billing_map.keys())\n",
+    "    main_df.loc[updated_rows, 'Old Billing Entity'] = main_df.loc[updated_rows, 'Billing Entity']\n",
+    "    main_df.loc[updated_rows, 'Billing Entity'] = main_df.loc[updated_rows, 'Temp_BPCC'].map(bpcc_billing_map)\n",
+    "    main_df.loc[updated_rows, 'Comment'] += main_df.loc[updated_rows].apply(\n",
+    "        lambda row: f\"Billing Entity updated from '{row['Old Billing Entity']}' to '{row['Billing Entity']}'\", axis=1\n",
+    "    )\n",
+    "\n",
+    "    # Create key after update\n",
+    "    main_df['BPCC_Billing_Key'] = main_df['Temp_BPCC'] + main_df['Billing Entity'].astype(str).str.strip()\n",
+    "    last_month_df['BPCC_Billing_Key'] = last_month_df['Temp_BPCC'] + last_month_df['Billing Entity'].astype(str).str.strip()\n",
+    "\n",
+    "    unmatched_mask = ~main_df['BPCC_Billing_Key'].isin(last_month_df['BPCC_Billing_Key'])\n",
+    "\n",
+    "    # Add comment for unmatched\n",
+    "    comment_text = 'Business Partner Cost Center & Billing Entity not found in last month file'\n",
+    "    main_df.loc[unmatched_mask & main_df['Comment'].eq(''), 'Comment'] = comment_text\n",
+    "    main_df.loc[unmatched_mask & main_df['Comment'].ne('') & ~main_df['Comment'].str.contains(comment_text, case=False), 'Comment'] += ' | ' + comment_text\n",
+    "\n",
+    "    # Clean up\n",
+    "    main_df.drop(columns=['Temp_BPCC', 'BPCC_Billing_Key', 'Old Billing Entity'], errors='ignore', inplace=True)\n",
+    "    last_month_df.drop(columns=['Temp_BPCC', 'BPCC_Billing_Key'], inplace=True)\n",
+    "\n",
+    "    return main_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "01d641a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Data:\n",
+      "  BP ccenter\n",
+      "0     00123 \n",
+      "1       0456\n",
+      "2        NaN\n",
+      "3    000789 \n",
+      "4    abc123 \n",
+      "5       None\n",
+      "6      0000 \n",
+      "\n",
+      "After trimming spaces (leading zeros retained, NaNs intact):\n",
+      "  BP ccenter\n",
+      "0      00123\n",
+      "1       0456\n",
+      "2        NaN\n",
+      "3     000789\n",
+      "4     abc123\n",
+      "5       None\n",
+      "6       0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Example DataFrame\n",
+    "data = {\n",
+    "    'BP ccenter': [' 00123 ', ' 0456', np.nan, '000789 ', ' abc123 ', None, ' 0000 ']\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(\"Original Data:\")\n",
+    "print(df)\n",
+    "\n",
+    "# Trim spaces but keep leading zeros and NaNs as NaN\n",
+    "df['BP ccenter'] = df['BP ccenter'].apply(lambda x: str(x).strip() if pd.notnull(x) else x)\n",
+    "\n",
+    "print(\"\\nAfter trimming spaces (leading zeros retained, NaNs intact):\")\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d442848e",
    "metadata": {},
    "outputs": [],
