--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "019730eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def normalize_billing_entities(main_df, last_month_df):\n",
+    "    # Create working copies\n",
+    "    df = main_df.copy()\n",
+    "    last_df = last_month_df.copy()\n",
+    "\n",
+    "    # Standardize column names\n",
+    "    bpcc_col = 'Business Partner Cost Center'\n",
+    "    billing_col = 'Billing Entity'\n",
+    "\n",
+    "    # Add helper lowercase columns for internal logic\n",
+    "    df['bpcc_lower'] = df[bpcc_col].astype(str).str.strip().str.lower()\n",
+    "    df['billing_lower'] = df[billing_col].astype(str).str.strip().str.lower()\n",
+    "    last_df['bpcc_lower'] = last_df[bpcc_col].astype(str).str.strip().str.lower()\n",
+    "    last_df['billing_lower'] = last_df[billing_col].astype(str).str.strip().str.lower()\n",
+    "\n",
+    "    # Create mapping of last month's BPCC -> billing entity\n",
+    "    last_month_map = last_df.drop_duplicates('bpcc_lower').set_index('bpcc_lower')['billing_lower'].to_dict()\n",
+    "    last_month_orig_case_map = last_df.drop_duplicates('bpcc_lower').set_index('bpcc_lower')[billing_col].to_dict()\n",
+    "\n",
+    "    # Create result columns\n",
+    "    df['Original Billing Entity'] = df[billing_col]\n",
+    "    df['Comments'] = \"\"\n",
+    "\n",
+    "    # Step 1: Normalize billing entity values based on last month's file\n",
+    "    grouped = df.groupby('bpcc_lower')['billing_lower'].unique()\n",
+    "\n",
+    "    for bpcc, billing_list in grouped.items():\n",
+    "        if len(billing_list) > 1 and bpcc in last_month_map:\n",
+    "            correct = last_month_map[bpcc]\n",
+    "            correct_case = last_month_orig_case_map[bpcc]\n",
+    "\n",
+    "            for billing in billing_list:\n",
+    "                if billing != correct:\n",
+    "                    # Check if correct is a substring\n",
+    "                    if correct in billing or billing in correct:\n",
+    "                        # Replace in df\n",
+    "                        mask = (df['bpcc_lower'] == bpcc) & (df['billing_lower'] == billing)\n",
+    "                        df.loc[mask, billing_col] = correct_case\n",
+    "                        df.loc[mask, 'Comments'] = (\n",
+    "                            \"Billing Entity replaced based on last month file. Original: \" +\n",
+    "                            df.loc[mask, 'Original Billing Entity']\n",
+    "                        )\n",
+    "                    else:\n",
+    "                        # Mark as multiple conflicting entities\n",
+    "                        mask = (df['bpcc_lower'] == bpcc) & (df['billing_lower'] == billing)\n",
+    "                        df.loc[mask, 'Comments'] = \"Multiple billing entities found (not matched to last month value)\"\n",
+    "\n",
+    "    # Step 2: Check for new combinations (bpcc + billing entity)\n",
+    "    df['bpcc_billing_combo'] = df['bpcc_lower'] + '|' + df[billing_col].astype(str).str.strip().str.lower()\n",
+    "    last_df['bpcc_billing_combo'] = last_df['bpcc_lower'] + '|' + last_df[billing_col].astype(str).str.strip().str.lower()\n",
+    "\n",
+    "    last_combos = set(last_df['bpcc_billing_combo'])\n",
+    "\n",
+    "    # Only check BPCCs not starting with '9'\n",
+    "    mask_non9 = ~df[bpcc_col].astype(str).str.strip().str.startswith('9')\n",
+    "    mask_new_combo = ~df['bpcc_billing_combo'].isin(last_combos)\n",
+    "\n",
+    "    df.loc[mask_non9 & mask_new_combo, 'Comments'] = df.loc[mask_non9 & mask_new_combo, 'Comments'].apply(\n",
+    "        lambda x: (x + \" | \" if x else \"\") + \"New billing cc found\"\n",
+    "    )\n",
+    "\n",
+    "    # Clean up helper columns\n",
+    "    df.drop(columns=['bpcc_lower', 'billing_lower', 'bpcc_billing_combo'], inplace=True)\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1f99d3fb",
    "metadata": {},
    "outputs": [],
@@ -10,7 +86,7 @@
     "def flag_new_bpce_combinations(main_df, last_month_df):\n",
     "    # Clean for matching\n",
     "    def clean_for_key(series):\n",
-    "        return series.astype(str).str.strip().str.lstrip('0')\n",
+    "        return series.astyp`e(str).str.strip().str.lstrip('0')\n",
     "\n",
     "    # Create temp cleaned BPCC keys\n",
     "    main_df['Temp_BPCC'] = clean_for_key(main_df['Business Partner Cost Center'])\n",
