--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e163c85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def standardize_bpcc_using_last_month(main_df: pd.DataFrame, last_month_df: pd.DataFrame,\n",
+    "                                      bpcc_col='Business Partner Cost Center') -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Standardizes the BPCC (Business Partner Cost Center) values in main_df using last_month_df,\n",
+    "    resolving issues where some values may start with leading zeros.\n",
+    "\n",
+    "    Parameters:\n",
+    "        main_df (pd.DataFrame): Current month's DataFrame.\n",
+    "        last_month_df (pd.DataFrame): Previous month's DataFrame.\n",
+    "        bpcc_col (str): Column name for BPCC.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: Updated main_df with standardized BPCC values.\n",
+    "    \"\"\"\n",
+    "    # Convert to string to preserve leading zeros\n",
+    "    main_df[bpcc_col] = main_df[bpcc_col].astype(str).str.strip()\n",
+    "    last_month_df[bpcc_col] = last_month_df[bpcc_col].astype(str).str.strip()\n",
+    "\n",
+    "    # Optional: store original for traceability\n",
+    "    main_df['Original_' + bpcc_col] = main_df[bpcc_col]\n",
+    "\n",
+    "    # Build mapping from numeric version to standard version in last_month_df\n",
+    "    bpcc_map = {}\n",
+    "    for val in last_month_df[bpcc_col].unique():\n",
+    "        try:\n",
+    "            bpcc_map[int(val)] = val  # maps 1234 -> '01234' (if that's how it appears in last_month_df)\n",
+    "        except ValueError:\n",
+    "            continue  # skip non-numeric BPCCs if any\n",
+    "\n",
+    "    # Apply the mapping\n",
+    "    def map_bpcc(val):\n",
+    "        try:\n",
+    "            numeric = int(val)\n",
+    "            return bpcc_map.get(numeric, val)  # return mapped BPCC or original if not found\n",
+    "        except ValueError:\n",
+    "            return val  # if non-numeric, return as-is\n",
+    "\n",
+    "    main_df[bpcc_col] = main_df[bpcc_col].apply(map_bpcc)\n",
+    "\n",
+    "    return main_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "019730eb",
    "metadata": {},
    "outputs": [],
