--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e163c85",
+   "id": "714fe2fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def normalize_bpcc_and_billing_entities(main_df, last_month_df):\n",
+    "    df = main_df.copy()\n",
+    "    last_df = last_month_df.copy()\n",
+    "\n",
+    "    bpcc_col = 'Business Partner Cost Center'\n",
+    "    billing_col = 'Billing Entity'\n",
+    "\n",
+    "    # Convert to string and trim\n",
+    "    df[bpcc_col] = df[bpcc_col].astype(str).str.strip()\n",
+    "    last_df[bpcc_col] = last_df[bpcc_col].astype(str).str.strip()\n",
+    "    df[billing_col] = df[billing_col].astype(str).str.strip()\n",
+    "    last_df[billing_col] = last_df[billing_col].astype(str).str.strip()\n",
+    "\n",
+    "    # Step 1: Standardize BPCCs using last_month_df\n",
+    "    df['Original_Business Partner Cost Center'] = df[bpcc_col]\n",
+    "    df['bpcc_numeric'] = df[bpcc_col].str.lstrip('0')\n",
+    "    last_df['bpcc_numeric'] = last_df[bpcc_col].str.lstrip('0')\n",
+    "\n",
+    "    # Create a mapping from numeric BPCC to the format from last month (with leading 0s if any)\n",
+    "    bpcc_map = last_df.drop_duplicates('bpcc_numeric').set_index('bpcc_numeric')[bpcc_col].to_dict()\n",
+    "\n",
+    "    # Replace BPCCs in df using mapping\n",
+    "    df[bpcc_col] = df['bpcc_numeric'].map(bpcc_map).fillna(df[bpcc_col])\n",
+    "\n",
+    "    # Step 2: Normalize billing entity\n",
+    "    df['bpcc_lower'] = df[bpcc_col].str.lower()\n",
+    "    df['billing_lower'] = df[billing_col].str.lower()\n",
+    "    last_df['bpcc_lower'] = last_df[bpcc_col].str.lower()\n",
+    "    last_df['billing_lower'] = last_df[billing_col].str.lower()\n",
+    "\n",
+    "    last_month_map = last_df.drop_duplicates('bpcc_lower').set_index('bpcc_lower')['billing_lower'].to_dict()\n",
+    "    last_month_orig_case_map = last_df.drop_duplicates('bpcc_lower').set_index('bpcc_lower')[billing_col].to_dict()\n",
+    "\n",
+    "    df['Original Billing Entity'] = df[billing_col]\n",
+    "    df['Comments'] = \"\"\n",
+    "\n",
+    "    grouped = df.groupby('bpcc_lower')['billing_lower'].unique()\n",
+    "\n",
+    "    for bpcc, billing_list in grouped.items():\n",
+    "        if len(billing_list) > 1 and bpcc in last_month_map:\n",
+    "            correct = last_month_map[bpcc]\n",
+    "            correct_case = last_month_orig_case_map[bpcc]\n",
+    "\n",
+    "            for billing in billing_list:\n",
+    "                if billing != correct:\n",
+    "                    mask = (df['bpcc_lower'] == bpcc) & (df['billing_lower'] == billing)\n",
+    "                    if correct in billing or billing in correct:\n",
+    "                        df.loc[mask, billing_col] = correct_case\n",
+    "                        df.loc[mask, 'Comments'] = (\n",
+    "                            \"Billing Entity replaced based on last month file. Original: \" +\n",
+    "                            df.loc[mask, 'Original Billing Entity']\n",
+    "                        )\n",
+    "                    else:\n",
+    "                        df.loc[mask, 'Comments'] = \"Multiple billing entities found (not matched to last month value)\"\n",
+    "\n",
+    "    # Step 3: Check for new BPCC + Billing Entity combinations\n",
+    "    df['bpcc_billing_combo'] = df['bpcc_lower'] + '|' + df[billing_col].str.lower()\n",
+    "    last_df['bpcc_billing_combo'] = last_df['bpcc_lower'] + '|' + last_df[billing_col].str.lower()\n",
+    "\n",
+    "    last_combos = set(last_df['bpcc_billing_combo'])\n",
+    "\n",
+    "    mask_non9 = ~df[bpcc_col].str.startswith('9')\n",
+    "    mask_new_combo = ~df['bpcc_billing_combo'].isin(last_combos)\n",
+    "\n",
+    "    df.loc[mask_non9 & mask_new_combo, 'Comments'] = df.loc[mask_non9 & mask_new_combo, 'Comments'].apply(\n",
+    "        lambda x: (x + \" | \" if x else \"\") + \"New billing cc found\"\n",
+    "    )\n",
+    "\n",
+    "    # Cleanup helper columns\n",
+    "    df.drop(columns=['bpcc_lower', 'billing_lower', 'bpcc_billing_combo', 'bpcc_numeric'], inplace=True)\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af5a87b0",
    "metadata": {},
    "outputs": [],
    "source": [
