--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,82 +3,65 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "714fe2fc",
+   "id": "e469a1f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def normalize_bpcc_and_billing_entities(main_df, last_month_df):\n",
-    "    df = main_df.copy()\n",
-    "    last_df = last_month_df.copy()\n",
+    "def flag_duplicate_billing_names(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Flags records where a Billing Contact PSID is linked to multiple Billing Contact Names,\n",
+    "    and suggests if the email and name might belong to the same person.\n",
+    "    Also flags records where the same Billing Contact Name is used with multiple PSIDs.\n",
+    "    \"\"\"\n",
     "\n",
-    "    bpcc_col = 'Business Partner Cost Center'\n",
-    "    billing_col = 'Billing Entity'\n",
+    "    # Ensure required columns exist\n",
+    "    if 'Billing Contact PSID' not in df.columns or 'Billing Contact name' not in df.columns:\n",
+    "        raise KeyError(\"Missing required columns in the dataframe.\")\n",
     "\n",
-    "    # Convert to string and trim\n",
-    "    df[bpcc_col] = df[bpcc_col].astype(str).str.strip()\n",
-    "    last_df[bpcc_col] = last_df[bpcc_col].astype(str).str.strip()\n",
-    "    df[billing_col] = df[billing_col].astype(str).str.strip()\n",
-    "    last_df[billing_col] = last_df[billing_col].astype(str).str.strip()\n",
+    "    # Ensure 'Comment' column exists\n",
+    "    if 'Comment' not in df.columns:\n",
+    "        df['Comment'] = \"\"\n",
     "\n",
-    "    # Step 1: Standardize BPCCs using last_month_df\n",
-    "    df['Original_Business Partner Cost Center'] = df[bpcc_col]\n",
-    "    df['bpcc_numeric'] = df[bpcc_col].str.lstrip('0')\n",
-    "    last_df['bpcc_numeric'] = last_df[bpcc_col].str.lstrip('0')\n",
+    "    # --- Pass 1: Multiple names for same PSID ---\n",
+    "    grouped_by_psid = df.groupby('Billing Contact PSID')['Billing Contact name'].unique().reset_index()\n",
     "\n",
-    "    # Create a mapping from numeric BPCC to the format from last month (with leading 0s if any)\n",
-    "    bpcc_map = last_df.drop_duplicates('bpcc_numeric').set_index('bpcc_numeric')[bpcc_col].to_dict()\n",
+    "    for _, row in grouped_by_psid.iterrows():\n",
+    "        psid = row['Billing Contact PSID']\n",
+    "        names = row['Billing Contact name']\n",
     "\n",
-    "    # Replace BPCCs in df using mapping\n",
-    "    df[bpcc_col] = df['bpcc_numeric'].map(bpcc_map).fillna(df[bpcc_col])\n",
+    "        name_names = [n for n in names if '@' not in str(n)]\n",
+    "        email_names = [n for n in names if '@' in str(n)]\n",
     "\n",
-    "    # Step 2: Normalize billing entity\n",
-    "    df['bpcc_lower'] = df[bpcc_col].str.lower()\n",
-    "    df['billing_lower'] = df[billing_col].str.lower()\n",
-    "    last_df['bpcc_lower'] = last_df[bpcc_col].str.lower()\n",
-    "    last_df['billing_lower'] = last_df[billing_col].str.lower()\n",
+    "        for name in name_names:\n",
+    "            name_words = str(name).lower().split()\n",
+    "            for email in email_names:\n",
+    "                email_lower = str(email).lower()\n",
+    "                if any(word in email_lower for word in name_words):\n",
+    "                    idxs = df[(df['Billing Contact PSID'] == psid) & \n",
+    "                              (df['Billing Contact name'].isin([name, email]))].index\n",
+    "                    for idx in idxs:\n",
+    "                        old_comment = str(df.at[idx, 'Comment'])\n",
+    "                        new_comment = 'Duplicate name against same PSID, might be same person.'\n",
+    "                        if new_comment not in old_comment:\n",
+    "                            updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
+    "                            df.at[idx, 'Comment'] = updated_comment\n",
     "\n",
-    "    last_month_map = last_df.drop_duplicates('bpcc_lower').set_index('bpcc_lower')['billing_lower'].to_dict()\n",
-    "    last_month_orig_case_map = last_df.drop_duplicates('bpcc_lower').set_index('bpcc_lower')[billing_col].to_dict()\n",
+    "    # --- Pass 2: Same name for multiple PSIDs ---\n",
+    "    grouped_by_name = df.groupby('Billing Contact name')['Billing Contact PSID'].nunique().reset_index()\n",
     "\n",
-    "    df['Original Billing Entity'] = df[billing_col]\n",
-    "    df['Comments'] = \"\"\n",
-    "\n",
-    "    grouped = df.groupby('bpcc_lower')['billing_lower'].unique()\n",
-    "\n",
-    "    for bpcc, billing_list in grouped.items():\n",
-    "        if len(billing_list) > 1 and bpcc in last_month_map:\n",
-    "            correct = last_month_map[bpcc]\n",
-    "            correct_case = last_month_orig_case_map[bpcc]\n",
-    "\n",
-    "            for billing in billing_list:\n",
-    "                if billing != correct:\n",
-    "                    mask = (df['bpcc_lower'] == bpcc) & (df['billing_lower'] == billing)\n",
-    "                    if correct in billing or billing in correct:\n",
-    "                        df.loc[mask, billing_col] = correct_case\n",
-    "                        df.loc[mask, 'Comments'] = (\n",
-    "                            \"Billing Entity replaced based on last month file. Original: \" +\n",
-    "                            df.loc[mask, 'Original Billing Entity']\n",
-    "                        )\n",
-    "                    else:\n",
-    "                        df.loc[mask, 'Comments'] = \"Multiple billing entities found (not matched to last month value)\"\n",
-    "\n",
-    "    # Step 3: Check for new BPCC + Billing Entity combinations\n",
-    "    df['bpcc_billing_combo'] = df['bpcc_lower'] + '|' + df[billing_col].str.lower()\n",
-    "    last_df['bpcc_billing_combo'] = last_df['bpcc_lower'] + '|' + last_df[billing_col].str.lower()\n",
-    "\n",
-    "    last_combos = set(last_df['bpcc_billing_combo'])\n",
-    "\n",
-    "    mask_non9 = ~df[bpcc_col].str.startswith('9')\n",
-    "    mask_new_combo = ~df['bpcc_billing_combo'].isin(last_combos)\n",
-    "\n",
-    "    df.loc[mask_non9 & mask_new_combo, 'Comments'] = df.loc[mask_non9 & mask_new_combo, 'Comments'].apply(\n",
-    "        lambda x: (x + \" | \" if x else \"\") + \"New billing cc found\"\n",
-    "    )\n",
-    "\n",
-    "    # Cleanup helper columns\n",
-    "    df.drop(columns=['bpcc_lower', 'billing_lower', 'bpcc_billing_combo', 'bpcc_numeric'], inplace=True)\n",
+    "    for _, row in grouped_by_name.iterrows():\n",
+    "        name = row['Billing Contact name']\n",
+    "        psid_count = row['Billing Contact PSID']\n",
+    "        if psid_count > 1:\n",
+    "            idxs = df[df['Billing Contact name'] == name].index\n",
+    "            for idx in idxs:\n",
+    "                old_comment = str(df.at[idx, 'Comment'])\n",
+    "                new_comment = 'Same contact name appears against multiple PSIDs.'\n",
+    "                if new_comment not in old_comment:\n",
+    "                    updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
+    "                    df.at[idx, 'Comment'] = updated_comment\n",
     "\n",
     "    return df\n"
    ]
@@ -86,58 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af5a87b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def standardize_bpcc_using_last_month(main_df: pd.DataFrame, last_month_df: pd.DataFrame,\n",
-    "                                      bpcc_col='Business Partner Cost Center') -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Standardizes the BPCC (Business Partner Cost Center) values in main_df using last_month_df,\n",
-    "    resolving issues where some values may start with leading zeros.\n",
-    "\n",
-    "    Parameters:\n",
-    "        main_df (pd.DataFrame): Current month's DataFrame.\n",
-    "        last_month_df (pd.DataFrame): Previous month's DataFrame.\n",
-    "        bpcc_col (str): Column name for BPCC.\n",
-    "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: Updated main_df with standardized BPCC values.\n",
-    "    \"\"\"\n",
-    "    # Convert to string to preserve leading zeros\n",
-    "    main_df[bpcc_col] = main_df[bpcc_col].astype(str).str.strip()\n",
-    "    last_month_df[bpcc_col] = last_month_df[bpcc_col].astype(str).str.strip()\n",
-    "\n",
-    "    # Optional: store original for traceability\n",
-    "    main_df['Original_' + bpcc_col] = main_df[bpcc_col]\n",
-    "\n",
-    "    # Build mapping from numeric version to standard version in last_month_df\n",
-    "    bpcc_map = {}\n",
-    "    for val in last_month_df[bpcc_col].unique():\n",
-    "        try:\n",
-    "            bpcc_map[int(val)] = val  # maps 1234 -> '01234' (if that's how it appears in last_month_df)\n",
-    "        except ValueError:\n",
-    "            continue  # skip non-numeric BPCCs if any\n",
-    "\n",
-    "    # Apply the mapping\n",
-    "    def map_bpcc(val):\n",
-    "        try:\n",
-    "            numeric = int(val)\n",
-    "            return bpcc_map.get(numeric, val)  # return mapped BPCC or original if not found\n",
-    "        except ValueError:\n",
-    "            return val  # if non-numeric, return as-is\n",
-    "\n",
-    "    main_df[bpcc_col] = main_df[bpcc_col].apply(map_bpcc)\n",
-    "\n",
-    "    return main_df\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "019730eb",
+   "id": "2790f79d",
    "metadata": {},
    "outputs": [],
    "source": [
