--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e469a1f2",
+   "id": "044ad265",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "def flag_duplicate_billing_names(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Ensure required columns exist\n",
+    "    name_col = 'Billing Contact Name'\n",
+    "    psid_col = 'Billing Contact PS ID'\n",
+    "    comment_col = 'Comment'\n",
+    "\n",
+    "    if name_col not in df.columns or psid_col not in df.columns:\n",
+    "        raise KeyError(\"Missing required columns in the dataframe.\")\n",
+    "\n",
+    "    # Ensure 'Comment' column exists\n",
+    "    if comment_col not in df.columns:\n",
+    "        df[comment_col] = \"\"\n",
+    "\n",
+    "    # --------- Case 1: Multiple Names for Same PS ID ---------\n",
+    "    psid_grouped = df.groupby(psid_col)[name_col].unique().reset_index()\n",
+    "\n",
+    "    for _, row in psid_grouped.iterrows():\n",
+    "        psid = row[psid_col]\n",
+    "        names = row[name_col]\n",
+    "\n",
+    "        name_names = [n for n in names if '@' not in str(n)]\n",
+    "        email_names = [n for n in names if '@' in str(n)]\n",
+    "\n",
+    "        for name in name_names:\n",
+    "            name_words = str(name).lower().split()\n",
+    "            for email in email_names:\n",
+    "                email_lower = str(email).lower()\n",
+    "                if any(word in email_lower for word in name_words):\n",
+    "                    idxs = df[(df[psid_col] == psid) & (df[name_col].isin([name, email]))].index\n",
+    "                    for idx in idxs:\n",
+    "                        old_comment = str(df.at[idx, comment_col])\n",
+    "                        new_comment = 'Duplicate name against same PS ID, might be same person.'\n",
+    "                        if new_comment not in old_comment:\n",
+    "                            updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
+    "                            df.at[idx, comment_col] = updated_comment\n",
+    "\n",
+    "    # --------- Case 2: Multiple PS IDs for Same Name ---------\n",
+    "    name_grouped = df.groupby(name_col)[psid_col].nunique().reset_index()\n",
+    "    multi_psid_names = name_grouped[name_grouped[psid_col] > 1][name_col]\n",
+    "\n",
+    "    for name in multi_psid_names:\n",
+    "        idxs = df[df[name_col] == name].index\n",
+    "        for idx in idxs:\n",
+    "            old_comment = str(df.at[idx, comment_col])\n",
+    "            new_comment = 'Same contact name appears with multiple PS IDs.'\n",
+    "            if new_comment not in old_comment:\n",
+    "                updated_comment = f\"{old_comment} | {new_comment}\".strip(\" |\")\n",
+    "                df.at[idx, comment_col] = updated_comment\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a040520d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2790f79d",
+   "id": "d1929757",
    "metadata": {},
    "outputs": [],
    "source": [
