--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "044ad265",
+   "id": "450b3152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def prepare_fte_summary_table(billed_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Rename Total FTE for clarity\n",
+    "    billed_df['Sum of No. of FTE'] = billed_df['Total FTE']\n",
+    "    \n",
+    "    # Round Sum of % to two decimals\n",
+    "    billed_df['Sum of %'] = billed_df['Sum of %'].round(2)\n",
+    "\n",
+    "    # Columns required in final output\n",
+    "    cols = ['AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
+    "            'Billing Contact PS ID', 'BP CC1', 'BP CC2', 'Sum of No. of FTE', 'Sum of %']\n",
+    "    output_df = billed_df[cols].copy()\n",
+    "\n",
+    "    # Add adjustment column initialized as 0.0\n",
+    "    output_df['Adjustment Applied'] = 0.0\n",
+    "\n",
+    "    # Group by AID and check % sum\n",
+    "    for aid, group in output_df.groupby('AID'):\n",
+    "        percent_sum = group['Sum of %'].sum().round(2)\n",
+    "        adjustment_needed = round(100.0 - percent_sum, 2)\n",
+    "\n",
+    "        if adjustment_needed != 0.0:\n",
+    "            # Apply the adjustment to the first row of this AID\n",
+    "            idx = group.index[0]\n",
+    "            output_df.at[idx, 'Sum of %'] += adjustment_needed\n",
+    "            output_df.at[idx, 'Sum of %'] = round(output_df.at[idx, 'Sum of %'], 2)\n",
+    "            output_df.at[idx, 'Adjustment Applied'] = adjustment_needed\n",
+    "\n",
+    "    return output_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f968c7d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a040520d",
+   "id": "722713ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1929757",
+   "id": "6a25b157",
    "metadata": {},
    "outputs": [],
    "source": [
