--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "450b3152",
+   "id": "d6874160",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def calculate_fte_summary(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Filter only Billed rows (case-insensitive)\n",
+    "    billed_df = df[df['Category for Static'].str.lower() == 'billed'].copy()\n",
+    "\n",
+    "    # Sort by AID and Business Partner Cost Center for clarity (optional but helps)\n",
+    "    billed_df.sort_values(by=['AID', 'Business Partner Cost Center'], inplace=True)\n",
+    "\n",
+    "    # Step 1: Group by AID and Business Partner Cost Center, and sum No. of FTE\n",
+    "    bpcc_fte = billed_df.groupby(['AID', 'Business Partner Cost Center'])['No. of FTE'].sum().reset_index()\n",
+    "    bpcc_fte.rename(columns={'No. of FTE': 'BPCC FTE'}, inplace=True)\n",
+    "\n",
+    "    # Step 2: Merge summed FTEs back to original\n",
+    "    billed_df = billed_df.merge(bpcc_fte, on=['AID', 'Business Partner Cost Center'], how='left')\n",
+    "\n",
+    "    # Step 3: Get Total FTE per AID by summing BPCC FTEs (they are repeated now per row)\n",
+    "    total_fte_by_aid = billed_df.groupby('AID')['BPCC FTE'].transform('sum')\n",
+    "    billed_df['Total FTE'] = total_fte_by_aid\n",
+    "\n",
+    "    # Step 4: Calculate Sum of % = (No. of FTE / Total FTE) * 100\n",
+    "    billed_df['Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
+    "    billed_df['Sum of %'] = billed_df['Sum of %'].round(2)\n",
+    "\n",
+    "    return billed_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90536a24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f968c7d6",
+   "id": "da26eb0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "722713ef",
+   "id": "14050040",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a25b157",
+   "id": "200f063c",
    "metadata": {},
    "outputs": [],
    "source": [
