--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,41 +3,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6874160",
+   "id": "6fe1e163",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def calculate_fte_summary(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    # Filter only Billed rows (case-insensitive)\n",
+    "def create_fte_summary_table(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Step 1: Filter only Billed rows (case-insensitive)\n",
     "    billed_df = df[df['Category for Static'].str.lower() == 'billed'].copy()\n",
     "\n",
-    "    # Sort by AID and Business Partner Cost Center for clarity (optional but helps)\n",
-    "    billed_df.sort_values(by=['AID', 'Business Partner Cost Center'], inplace=True)\n",
+    "    # Step 2: Group by AID and Business Partner Cost Center\n",
+    "    grouped = billed_df.groupby(['AID', 'Business Partner Cost Center'], as_index=False).agg({\n",
+    "        'No. of FTE': 'sum',\n",
+    "        'Billing Entity': 'first',\n",
+    "        'Currency': 'first',\n",
+    "        'Billing Contact PS ID': 'first',\n",
+    "        'BP CC1': 'first',\n",
+    "        'BP CC2': 'first'\n",
+    "    })\n",
     "\n",
-    "    # Step 1: Group by AID and Business Partner Cost Center, and sum No. of FTE\n",
-    "    bpcc_fte = billed_df.groupby(['AID', 'Business Partner Cost Center'])['No. of FTE'].sum().reset_index()\n",
-    "    bpcc_fte.rename(columns={'No. of FTE': 'BPCC FTE'}, inplace=True)\n",
+    "    # Step 3: Rename for clarity\n",
+    "    grouped.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
     "\n",
-    "    # Step 2: Merge summed FTEs back to original\n",
-    "    billed_df = billed_df.merge(bpcc_fte, on=['AID', 'Business Partner Cost Center'], how='left')\n",
+    "    # Step 4: Get total FTE per AID\n",
+    "    total_fte_by_aid = grouped.groupby('AID')['Sum of No. of FTE'].transform('sum')\n",
+    "    grouped['Total FTE'] = total_fte_by_aid\n",
     "\n",
-    "    # Step 3: Get Total FTE per AID by summing BPCC FTEs (they are repeated now per row)\n",
-    "    total_fte_by_aid = billed_df.groupby('AID')['BPCC FTE'].transform('sum')\n",
-    "    billed_df['Total FTE'] = total_fte_by_aid\n",
+    "    # Step 5: Calculate Sum of %\n",
+    "    grouped['Sum of %'] = (grouped['Sum of No. of FTE'] / grouped['Total FTE']) * 100\n",
+    "    grouped['Sum of %'] = grouped['Sum of %'].round(2)\n",
     "\n",
-    "    # Step 4: Calculate Sum of % = (No. of FTE / Total FTE) * 100\n",
-    "    billed_df['Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
-    "    billed_df['Sum of %'] = billed_df['Sum of %'].round(2)\n",
+    "    # Step 6: Identify AIDs where total % != 100 and calculate adjustment\n",
+    "    percent_check = grouped.groupby('AID')['Sum of %'].sum().reset_index()\n",
+    "    percent_check['Adjustment Needed'] = (100 - percent_check['Sum of %']).round(2)\n",
+    "    grouped = grouped.merge(percent_check[['AID', 'Adjustment Needed']], on='AID', how='left')\n",
     "\n",
-    "    return billed_df\n"
+    "    return grouped\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90536a24",
+   "id": "267252b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da26eb0d",
+   "id": "a4329e8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14050040",
+   "id": "808079c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "200f063c",
+   "id": "0cc640e7",
    "metadata": {},
    "outputs": [],
    "source": [
