--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe1e163",
+   "id": "41d72546",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "    # Step 3: Rename for clarity\n",
     "    grouped.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
     "\n",
-    "    # Step 4: Get total FTE per AID\n",
+    "    # ✅ Step 4: Now use AID for total FTE across its BPCC combinations (correct logic)\n",
     "    total_fte_by_aid = grouped.groupby('AID')['Sum of No. of FTE'].transform('sum')\n",
     "    grouped['Total FTE'] = total_fte_by_aid\n",
     "\n",
@@ -37,6 +37,8 @@
     "    # Step 6: Identify AIDs where total % != 100 and calculate adjustment\n",
     "    percent_check = grouped.groupby('AID')['Sum of %'].sum().reset_index()\n",
     "    percent_check['Adjustment Needed'] = (100 - percent_check['Sum of %']).round(2)\n",
+    "\n",
+    "    # Merge back adjustment info\n",
     "    grouped = grouped.merge(percent_check[['AID', 'Adjustment Needed']], on='AID', how='left')\n",
     "\n",
     "    return grouped\n"
@@ -45,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "267252b6",
+   "id": "dee6a706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4329e8c",
+   "id": "88ca9eb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "808079c6",
+   "id": "b968f102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc640e7",
+   "id": "972c2d46",
    "metadata": {},
    "outputs": [],
    "source": [
