--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,51 +3,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d72546",
+   "id": "faa671c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def create_fte_summary_table(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    # Step 1: Filter only Billed rows (case-insensitive)\n",
+    "def calculate_fte_summary(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Filter only Billed rows (case-insensitive)\n",
     "    billed_df = df[df['Category for Static'].str.lower() == 'billed'].copy()\n",
     "\n",
-    "    # Step 2: Group by AID and Business Partner Cost Center\n",
-    "    grouped = billed_df.groupby(['AID', 'Business Partner Cost Center'], as_index=False).agg({\n",
+    "    # Calculate Total FTE per AID\n",
+    "    total_fte_by_aid = billed_df.groupby('AID')['No. of FTE'].sum()\n",
+    "    billed_df['Total FTE'] = billed_df['AID'].map(total_fte_by_aid)\n",
+    "\n",
+    "    # Calculate Sum of % = (No. of FTE / Total FTE) * 100\n",
+    "    billed_df['Sum of %'] = (billed_df['No. of FTE'] / billed_df['Total FTE']) * 100\n",
+    "\n",
+    "    return billed_df\n",
+    "\n",
+    "def create_fte_pivot(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # Get summary from your function\n",
+    "    billed_df = calculate_fte_summary(df)\n",
+    "\n",
+    "    # Group by the required fields\n",
+    "    group_cols = [\n",
+    "        'AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
+    "        'Billing Contact PS ID', 'BP CC1', 'BP CC2'\n",
+    "    ]\n",
+    "\n",
+    "    summary_df = billed_df.groupby(group_cols, as_index=False).agg({\n",
     "        'No. of FTE': 'sum',\n",
-    "        'Billing Entity': 'first',\n",
-    "        'Currency': 'first',\n",
-    "        'Billing Contact PS ID': 'first',\n",
-    "        'BP CC1': 'first',\n",
-    "        'BP CC2': 'first'\n",
+    "        'Sum of %': 'sum'\n",
     "    })\n",
     "\n",
-    "    # Step 3: Rename for clarity\n",
-    "    grouped.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
+    "    # Round % to two decimals\n",
+    "    summary_df['Sum of %'] = summary_df['Sum of %'].round(2)\n",
     "\n",
-    "    # ✅ Step 4: Now use AID for total FTE across its BPCC combinations (correct logic)\n",
-    "    total_fte_by_aid = grouped.groupby('AID')['Sum of No. of FTE'].transform('sum')\n",
-    "    grouped['Total FTE'] = total_fte_by_aid\n",
+    "    # Rename for clarity if needed\n",
+    "    summary_df.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
     "\n",
-    "    # Step 5: Calculate Sum of %\n",
-    "    grouped['Sum of %'] = (grouped['Sum of No. of FTE'] / grouped['Total FTE']) * 100\n",
-    "    grouped['Sum of %'] = grouped['Sum of %'].round(2)\n",
-    "\n",
-    "    # Step 6: Identify AIDs where total % != 100 and calculate adjustment\n",
-    "    percent_check = grouped.groupby('AID')['Sum of %'].sum().reset_index()\n",
-    "    percent_check['Adjustment Needed'] = (100 - percent_check['Sum of %']).round(2)\n",
-    "\n",
-    "    # Merge back adjustment info\n",
-    "    grouped = grouped.merge(percent_check[['AID', 'Adjustment Needed']], on='AID', how='left')\n",
-    "\n",
-    "    return grouped\n"
+    "    return summary_df\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee6a706",
+   "id": "f4d24635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88ca9eb3",
+   "id": "0f294bb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b968f102",
+   "id": "c7ac0560",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "972c2d46",
+   "id": "f6dccdf5",
    "metadata": {},
    "outputs": [],
    "source": [
