--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faa671c9",
+   "id": "f9cff665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,26 @@
     "    # Get summary from your function\n",
     "    billed_df = calculate_fte_summary(df)\n",
     "\n",
-    "    # Group by the required fields\n",
+    "    # Just round 'Sum of %' to 2 decimals and rename column\n",
+    "    billed_df['Sum of %'] = billed_df['Sum of %'].round(2)\n",
+    "    billed_df.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
+    "\n",
+    "    # Only keep the required columns (no grouping or aggregation)\n",
+    "    summary_df = billed_df[\n",
+    "        ['AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
+    "         'Billing Contact PS ID', 'BP CC1', 'BP CC2', 'Sum of No. of FTE', 'Sum of %']\n",
+    "    ].copy()\n",
+    "\n",
+    "    return summary_df\n",
+    "\n",
+    "## or\n",
+    "\n",
+    "def create_fte_pivot(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    billed_df = calculate_fte_summary(df)\n",
+    "\n",
+    "    # Fill missing values temporarily to avoid dropping during groupby\n",
+    "    billed_df.fillna(\"Missing\", inplace=True)\n",
+    "\n",
     "    group_cols = [\n",
     "        'AID', 'Billing Entity', 'Business Partner Cost Center', 'Currency',\n",
     "        'Billing Contact PS ID', 'BP CC1', 'BP CC2'\n",
@@ -37,10 +56,7 @@
     "        'Sum of %': 'sum'\n",
     "    })\n",
     "\n",
-    "    # Round % to two decimals\n",
     "    summary_df['Sum of %'] = summary_df['Sum of %'].round(2)\n",
-    "\n",
-    "    # Rename for clarity if needed\n",
     "    summary_df.rename(columns={'No. of FTE': 'Sum of No. of FTE'}, inplace=True)\n",
     "\n",
     "    return summary_df\n"
@@ -49,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d24635",
+   "id": "ea960397",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f294bb3",
+   "id": "85bcb62c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ac0560",
+   "id": "3a0858ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6dccdf5",
+   "id": "76a36b20",
    "metadata": {},
    "outputs": [],
    "source": [
